# exam_phase

./: .flake8  .gitignore  README.md  data_setup.ipynb  dataset.csv  headPoseEstimation.py  model.py  process.py  pyproject.toml  requirements.txt
Head-Pose-Estimation/: 01 Model Training.ipynb
assets/: pitch_yaw_roll.md
dataset/: dataset_y.npy
notebooks/: 00 Data Exploration.ipynb  data_setup.ipynb
notebooks/Head-Pose-Estimation/: 00 Data Exploration.ipynb  01 Model Training.ipynb  02 Model Testing.ipynb  poses.csv
references/: cheating_detection_model.py
scripts/utils/: video_converter.py
src/: app.py  constants.py  eye_gaze_detection.py  eye_gaze_estimator.py  facial_features_extractor.py  head_pose_estimation.py  head_pose_estimator.py  mediapipe_face_mesh_detector.py  misbehavior_feature_detector.py  mouth_state_detector.py  utils.py  video_splitter.py
src/models/head_pose_model/: LGBM_finetune.pkl  LGBM_finetune_v_optuna.pkl  new_model.pkl
